# simple-origami

./: .gitignore  LICENSE  README.md  simple-origami.cabal
src/Data/List/: Origami.hs
