name:                simple-origami
version:             0.1.0.0
synopsis:            Simple recursion patterns on list
description:         Please see README.md
homepage:            http://github.com/githubuser/simple-origami#readme
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
copyright:           2015 Nobuo Yamashita
category:            Data.List.Origami
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     Data.List.Origami
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite simple-origami-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple-origami
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple-origami
